[package]
name = "ggegui"
version = "0.3.8"
edition = "2021"
authors = ["NemuiSen <NemuiSen@proton.me>"]
license = "MIT"
repository = "https://github.com/NemuiSen/ggez-egui"
keywords = ["ggez", "egui", "gui", "gamedev"]
description = "A simple implementation of egui for ggez"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.24"
winit = { version = "0.30", features = ["serde"] }

[dependencies.ggez]
git = "https://github.com/snyball/ggez.git"
rev = "ddaf80eeb1a67376a480cd9569a09b5a146fb806"
default-features = false
features = ["audio", "gamepad"]

[dev-dependencies]
egui_demo_lib = "0.24"
